--- a/styles.css
+++ b/styles.css
@@ -64,7 +64,7 @@
     position: relative;
     width: 17px;
     height: 15px;
-    background-image: url("https://c.radikal.ru/c27/2108/fc/d8a04f60d08d.png");
+    background-image: url("https://files.dp.ua/ru/i/660bc121513a9d5442e97c5cef85786e/635310ce79b233a1408aa6c9af1db997");
     left: 43%;
     top: 2%;
 }
@@ -126,7 +126,7 @@ ul li{
     height: 15px;
     top: 0;
     left: 23%;
-    background-image: url("https://c.radikal.ru/c31/2108/1b/17aaa078093d.png");
+    background-image: url("https://files.dp.ua/ru/i/660bc121513a9d5442e97c5cef85786e/6e81a053d831eaf55b27099adce123c0");
 }
 
 .task-checkbox{
@@ -144,7 +144,7 @@ ul li{
 
 .toggle>span::before{
     content: '';
-    background-image: url("https://b.radikal.ru/b43/2108/31/b3381a01b230.png");
+    background-image: url("https://files.dp.ua/ru/i/660bc121513a9d5442e97c5cef85786e/aecbcb54f5e873fab28f57ad22641cff");
     width: 20px;
     height: 20px;
     position: relative;
@@ -155,7 +155,7 @@ ul li{
 }
 
 .toggle>input[type=checkbox]:checked+span::before{
-    background-image: url("https://b.radikal.ru/b27/2108/6b/4ebf341d4efc.png");
+    background-image: url("https://files.dp.ua/ru/i/660bc121513a9d5442e97c5cef85786e/0d4f7a2c6f03f16b98b08028c0fbbaa3");
 }
 
 ul li:hover{
@@ -195,27 +195,38 @@ ul li:hover{
     transition: all 0.3s ease-out;
 }
 
-.clear-all-tasks-container{
-    margin-top: 1%;
+#clear-button-container{
+    position: relative;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-self: center;
+}
+.clear-button-container{
+    position: relative;
     text-align: center;
     padding: 1%;
-    border: none;
-}
-
-#clear-button{
-    font-size: 14px;
-    color: #FF2851;
-    border-radius: 5px;
-    border: 1px solid #FF2851;
     width: 15%;
-    height: 30px;
-    background: #F3F3F3;
+    border: 1px solid #FA3E62;
+    border-radius: 5px;
+    transition: all 0.1s ease-out;
+    bottom: 10%;
+
+}
+
+.clear-button-container:hover{
+    background: #FA3E62;
     transition: all 0.1s ease-out;
 }
 
-#clear-button:hover{
-    color: #F3F3F3;
-    background: #FF2851;
+.clear-button-container:hover > #clear-button{
+    color: white;
     transition: all 0.1s ease-out;
+}
 
+.clear-button{
+    border: none;
+    background: none;
+    font-size: 14px;
+    transition: all 0.1s ease-out;
 }
